# IndoClaw

./: .gitignore  LICENSE  MANIFEST.in  MVP_ROADMAP.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  test_cmd_parser.py
docs/: README.md  api-reference.md  architecture.md  developer-guide.md  getting-started.md  troubleshooting.md
docs/backend/: README.md  api.md  websocket.md
docs/frontend/: README.md  components.md
src/: __init__.py  __main__.py  indoclaw.py
src/agents/: __init__.py  base.py  researcher.py  writer.py
src/config/: .env.example  __init__.py  settings.py
src/core/: __init__.py  agent.py  command_compiler.py  llm_adapter_base.py  llm_factory.py  observation.py
src/core/adapters/: __init__.py  ollama_adapter.py  openai_adapter.py
src/core/approval/: __init__.py  auto_approval.py  base.py
src/core/events/: __init__.py  publisher.py
src/core/memory/: __init__.py  deduplication.py  episode.py  episode_provider.py  long_term.py  provider.py  short_term.py  versioning.py
src/core/messaging/: __init__.py  agent_message.py  agent_registry.py  delegation_tool.py  interactive.py
src/core/plan/: __init__.py  base.py
src/core/planning/: planner.py
src/core/tools/: __init__.py  base.py  calculation.py  duckduckgo_search.py  file_ops.py  llm_call.py  registry.py  (+1 more)
src/interfaces/: __init__.py  cli.py
tests/: test_approval.py  test_core.py  test_deduplication.py  test_episode.py  test_events.py  test_interactive.py  test_memory.py  test_messaging.py  test_observation.py  test_plan.py  test_tools.py  test_versioning.py
(+23 files in other folders)
